plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
    id("org.sonarqube") version "7.1.0.6387"
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
    // === Spring Boot Starters ===
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // === Database ===
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

    // === Security (JWT) ===
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // === Third-Party Services (APIs Externas) ===
    implementation 'com.sendgrid:sendgrid-java:4.10.3'      // SendGrid
    implementation 'com.paypal.sdk:rest-api-sdk:1.14.0'    // PayPal SDK

    // === Utilities (Utilidades) ===
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // === Testing ===
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}


sonar {
    properties {
        property "sonar.projectKey", "JJARB-proyecto2024_JBART-API"
        property "sonar.organization", "JJARB"
        property "sonar.sources", "scr"
    }
}

tasks.named('test') {
	useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}
